--- a/package.json
+++ b/package.json
@@ -12,29 +12,33 @@
     "@mapbox/polyline": "^1.2.1",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "axios": "^1.13.2",
     "date-fns": "^2.30.0",
+    "electron-is-dev": "^3.0.1",
     "framer-motion": "^10.16.0",
+    "fs": "^0.0.1-security",
     "fuse.js": "^7.0.0",
     "graphql-request": "^6.1.0",
     "jszip": "^3.10.1",
     "maplibre-gl": "^3.6.0",
     "papaparse": "^5.4.1",
-    "pmtiles": "^2.11.0",
+    "pmtiles": "^3.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.1.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.5.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "byte-size": "^9.0.1",
+    "concurrently": "^8.2.0",
     "download": "^8.0.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "inquirer": "^8.2.7",
     "node-downloader-helper": "^2.1.10",
     "shelljs": "^0.8.5",
-    "concurrently": "^8.2.0",
     "wait-on": "^7.0.1"
   },
   "scripts": {
