--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "productName": "movitop-software",
     "files": [
       "build/**/*",
-      "background.js"
+      "background.js",
+      "preload.js"
     ],
     "extraMetadata": {
       "main": "background.js"
